force-app/main/default/objects/Enrollment_Session__c/Enrollment_Session__c.object-meta.xml
<CustomObject>
    <label>Enrollment Session</label>
    <nameField>
        <displayFormat>ES-{000000}</displayFormat>
        <label>Enrollment Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>