force-app/main/default/objects/Enrollment_Session__c/fields/Academic_Session__c.field-meta.xml
<CustomField>
    <fullName>Academic_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Academic Session</label>
    <referenceTo>AcademicSession</referenceTo>
    <relationshipLabel>Enrollment Sessions</relationshipLabel>
    <relationshipName>Enrollment_Sessions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>