force-app/main/default/objects/Enrollment_Session__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <formula>Academic_Session__r.AcademicTerm.Name</formula>
    <label>Academic Term</label>
    <type>Text</type>
</CustomField>