force-app/main/default/objects/Enrollment_Session__c/fields/Assigned_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrollment Sessions</relationshipLabel>
    <relationshipName>Enrollment_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>