force-app/main/default/objects/Enrollment_Session__c/fields/At_Risk_Course__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Course__c</fullName>
    <formula>Attendance__c &lt; 2.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>At Risk (Course)</label>
    <type>Checkbox</type>
</CustomField>