force-app/main/default/objects/Enrollment_Session__c/fields/Attended_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Attended_Sessions__c</fullName>
    <label>Attended Sessions</label>
    <summarizedField>Course_Attendance__c.Classes_Attended__c</summarizedField>
    <summaryForeignKey>Course_Attendance__c.Enrollment_Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>