force-app/main/default/objects/Enrollment_Session__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Program_Enrollment__r.Contact.FirstName + &quot; &quot; +  Program_Enrollment__r.Contact.LastName</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>