force-app/main/default/objects/Enrollment_Session__c/fields/LMS_GPA__c.field-meta.xml
<CustomField>
    <fullName>LMS_GPA__c</fullName>
    <label>LMS GPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>