force-app/main/default/objects/Enrollment_Session__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>Program_Enrollment__r.Program.Name</formula>
    <label>Program</label>
    <type>Text</type>
</CustomField>