force-app/main/default/objects/Enrollment_Session__c/fields/Registration_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Registration_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Allowed</label>
    <type>Checkbox</type>
</CustomField>