force-app/main/default/objects/Enrollment_Session__c/fields/Scheduled_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Sessions__c</fullName>
    <label>Scheduled Sessions</label>
    <summarizedField>Course_Attendance__c.Classes_Scheduled__c</summarizedField>
    <summaryForeignKey>Course_Attendance__c.Enrollment_Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>