force-app/main/default/objects/Enrollment_Session__c/fields/Status_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Effective_Date__c</fullName>
    <label>Status Effective Date</label>
    <type>DateTime</type>
</CustomField>