force-app/main/default/objects/Enrollment_Session__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment Unpaid</fullName>
            </value>
            <value>
                <fullName>Exception Window</fullName>
            </value>
            <value>
                <fullName>LOA Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>