force-app/main/default/objects/Enrollment_Session__c/fields/Total_Attempted_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Attempted_Credits__c</fullName>
    <label>Total Attempted Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>