force-app/main/default/objects/Enrollment_Session__c/fields/Total_Failed_Courses__c.field-meta.xml
<CustomField>
    <fullName>Total_Failed_Courses__c</fullName>
    <label>Total Failed Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>