force-app/main/default/objects/Enrollment_Session__c/listViews/Advanced_Management_Programme_in_Public.listView-meta.xml
<ListView>
    <fullName>Advanced_Management_Programme_in_Public</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Contact__c</columns>
    <columns>Academic_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Advanced Management Programme in Public Policy</value>
    </filters>
    <label>Advanced Management Programme in Public</label>
</ListView>