force-app/main/default/objects/Enrollment_Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Program__c</columns>
    <columns>Academic_Term__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>