force-app/main/default/objects/Enrollment_Session__c/listViews/PGP_in_Management_for_Young_Leaders.listView-meta.xml
<ListView>
    <fullName>PGP_in_Management_for_Young_Leaders</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Post Graduate Programme in Management for Young Leaders</value>
    </filters>
    <label>PGP in Management for Young Leaders</label>
</ListView>