force-app/main/default/objects/Enrollment_Session__c/listViews/Post_Graduate_Programme_in_Management.listView-meta.xml
<ListView>
    <fullName>Post_Graduate_Programme_in_Management</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Contact__c</columns>
    <columns>Academic_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Post Graduate Programme in Management</value>
    </filters>
    <label>Post Graduate Programme in Management</label>
</ListView>